--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>		<!-- Spring Boot Starter Test -->
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-validation</artifactId>   <!-- add validation -->
+		</dependency>
 	
 	</dependencies>
 
