ADDED: logs for every endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# Logging
+logging.file.name=logs/app.log
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.com.example.rideshare=DEBUG
+
 
 # === PostgreSQL ===
 #spring.datasource.url=jdbc:postgresql://localhost:5432/rideshare
